# RoboOps-Control-Plane

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  NOTICE.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-typescript.yml  ci.yml  ros2-edge-agent.yml
apps/cloud-edge-simulator/: package.json  tsconfig.json
apps/cloud-edge-simulator/src/: client.ts  config.ts  index.ts  messages.ts  types.ts
apps/cloud-edge-simulator/test/: simulator.test.ts
apps/event-worker/: package.json  tsconfig.json
apps/event-worker/src/: index.ts
apps/event-worker/test/: event-worker.test.ts
apps/fleet-platform/: package.json  tsconfig.json
apps/fleet-platform/src/: config.ts  event-hub.ts  ids.ts  index.ts  logging.ts  metrics.ts  postgres-readiness-check.ts  readiness.ts  repository.ts  server.ts  service.ts  types.ts  validation.ts  websocket.ts
apps/fleet-platform/test/: api-edge-gateway.test.ts  health-readiness.test.ts  metrics.test.ts  phase2-platform.test.ts  postgres-readiness-check.test.ts  postgres-runtime-persistence.test.ts  runtime-persistence.test.ts
apps/operator-ui/: package.json  tsconfig.json
apps/operator-ui/src/: api-client.ts  client.ts  config.ts  document.ts  index.ts  map-view-model.ts  mission-dom.ts  styles.ts  types.ts  view-model.ts
docs/: aws-fargate-brev-isaac-runbook.md  aws-kubernetes-demo-runbook.md  demo-script.md  robot-software-rollout.md
docs/architecture/: current-architecture.md
docs/decisions/: 0001-edge-transport.md  0002-state-model.md  0003-outbox-before-nats.md
edge/ros2-edge-agent-cpp/: CMakeLists.txt  README.md  package.xml
edge/ros2-edge-agent-cpp/config/: edge-agent.example.env
edge/ros2-edge-agent-cpp/include/roboops_ros2_edge_agent/: config.hpp  protocol.hpp
edge/ros2-edge-agent-cpp/launch/: edge_agent.launch.py
edge/ros2-edge-agent-cpp/scripts/: run-ros2-jazzy-container-check.sh  run-static-smoke.sh
edge/ros2-edge-agent-cpp/src/: config.cpp  main.cpp  protocol.cpp
edge/ros2-edge-agent-cpp/test/: config_protocol_smoke.cpp
infra/aws/: README.md  ecs-fargate-cloud.yml
infra/container-images/: Dockerfile  entrypoint.sh
infra/docker-compose/: README.md  docker-compose.local.yml
infra/helm/: README.md
sim/isaac-sim/: README.md
sim/ros2-gazebo/: README.md
test/contract-tests/: README.md
test/incident-scenarios/: README.md
test/integration-tests/: README.md
(+30 files in other folders)
