<?xml version="1.0"?>
<package format="3">
  <name>roboops_ros2_edge_agent</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy edge agent skeleton for the RoboOps outbound edge protocol.</description>
  <maintainer email="maintainers@example.invalid">RoboOps Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
